--- a/views/admin/signup.html
+++ b/views/admin/signup.html
@@ -28,8 +28,8 @@
                                             <label for="imagenAdmin" style="cursor: pointer;">
                                                 <img id="imagenMuestra"
                                                     class="rounded mx-auto d-block img-fluid mt-3 border border-3 border-secondary-subtle rounded-circle imagen_R"
-                                                    src="../../resources/error/images/404Administrador.png" alt="..."
-                                                    width="200px" height="200px">
+                                                    src="../../resources/images/error/404Administrador.png"
+                                                    alt="error cargar imagen" width="200px" height="200px">
                                             </label>
                                             <input id="imagenAdmin" type="file" name="imagenAdmin"
                                                 class="form-control d-none" accept=".png, .jpg">
@@ -42,17 +42,13 @@
                                         <div class="col-lg-6 col-md-12 col-sm-12">
                                             <label class="form-label">Apellido</label>
                                             <input type="text" id="apellidoAdmin" name="apellidoAdmin"
-                                                autocomplete="off" class="form-control" required>
-                                        </div>
-                                        <div class="col-lg-6 col-md-12 col-sm-12">
-                                            <label class="form-label">Usuario</label>
-                                            <input type="text" id="usuarioAdmin" name="usuarioAdmin" autocomplete="off"
-                                                class="form-control" required oninput="formatAlphabetic(this)">
+                                                autocomplete="off" class="form-control" required
+                                                oninput="formatAlphabetic(this)">
                                         </div>
                                         <div class="col-lg-6 col-md-12 col-sm-12">
                                             <label class="form-label">Teléfono</label>
                                             <input type="tel" id="telefonoAdmin" name="telefonoAdmin" autocomplete="off"
-                                                class="form-control" required>
+                                                class="form-control" required oninput="formatPhoneNumber(this)">
                                         </div>
                                         <div class="col-lg-6 col-md-12 col-sm-12">
                                             <label class="form-label">Correo Electrónico</label>
@@ -65,12 +61,13 @@
                                         <div class="col-lg-6">
                                             <label for="" class="form-label">Clave</label>
                                             <input type="password" id="claveAdmin" name="claveAdmin" autocomplete="off"
-                                                class="form-control" required>
+                                                class="form-control" required oninput="formatPassword(this)">
                                         </div>
                                         <div class="col-lg-6">
                                             <label for="" class="form-label">Repetir Clave</label>
                                             <input type="password" id="claveAdmin2" name="claveAdmin2"
-                                                autocomplete="off" class="form-control" required>
+                                                autocomplete="off" class="form-control" required
+                                                oninput="formatPassword(this)">
                                         </div>
                                     </div>
                                     <div class="justify-content-center text-center mt-3">
