--- a/views/public/historial.html
+++ b/views/public/historial.html
@@ -28,6 +28,19 @@
             <!-- Cuerpo de la tabla para mostrar un registro por fila -->
             <tbody id="tableBody"></tbody>
         </table>
+
+        <!-- modal para mostrar el contenido de cada requisicion -->
+        <div class="modal fade" id="showModal" data-bs-keyboard="false">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="staticBackdropLabel">Materiales solicitados</h1>
+                        <h3 id="dateMaterials"></h3>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <!-- IMPORTACIÓN DE ARCHIVOS JAVASCRIPT -->
